# task-payments-aggregator

./: config.py  main.py  pyproject.toml
bot/: commands.py  crud.py  db.py  handlers.py  schemas.py  utils.py
salary-aggregator/: config.py  main.py  schemas.py
