[tool.poetry]
name = "salary-aggregator"
version = "0.1.0"
description = ""
authors = ["Sosnovskikh Kirill <sosnovskix.kir2001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
